--- a/choosegundam.ui
+++ b/choosegundam.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MW1</class>
- <widget class="QMainWindow" name="MW1">
+ <class>ChooseGundam</class>
+ <widget class="QMainWindow" name="ChooseGundam">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1877</width>
-    <height>1012</height>
+    <width>1821</width>
+    <height>943</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,10 +17,10 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>1610</x>
-      <y>60</y>
-      <width>231</width>
-      <height>61</height>
+      <x>310</x>
+      <y>560</y>
+      <width>191</width>
+      <height>181</height>
      </rect>
     </property>
     <property name="text">
@@ -33,10 +33,10 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>1620</x>
-      <y>240</y>
-      <width>241</width>
-      <height>51</height>
+      <x>680</x>
+      <y>560</y>
+      <width>181</width>
+      <height>181</height>
      </rect>
     </property>
     <property name="text">
@@ -49,10 +49,26 @@
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>1630</x>
-      <y>150</y>
-      <width>221</width>
-      <height>61</height>
+      <x>1090</x>
+      <y>560</y>
+      <width>171</width>
+      <height>181</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_4">
+    <property name="geometry">
+     <rect>
+      <x>1470</x>
+      <y>560</y>
+      <width>161</width>
+      <height>181</height>
      </rect>
     </property>
     <property name="text">
@@ -68,7 +84,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1877</width>
+     <width>1821</width>
      <height>30</height>
     </rect>
    </property>
